# CppGen

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml  cmake.yml  publish_doc.yml
include/cppgen/: cppgen.h
include/cppgen/generator/: codeGenerator.h
source/: main.cpp
source/cppgen/: cppgen.cpp
source/cppgen/cursor/: cursor.cpp  cursor.h  cursor_type.cpp  cursor_type.h
source/cppgen/generator/: dynamicData.cpp  dynamicData.h
source/cppgen/parser/: parser.cpp  parser.h
test/: cppgen_test.cpp  test_codeGenerator.cpp  test_cppgen.cpp
